--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  margin: 10vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,3 +26,7 @@
   margin: 20px;
 }
 
+.DisplayData {
+  margin: 0 20vw;
+
+}
