--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,35 @@
 }
 
 .DisplayData {
-  margin: 0 20vw 20vh;
+  margin: 0 10vw 10vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
 
+h2 {
+  color: #980000;
+  font-weight:400;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
 }
 
 hr {
   height:1px;
   border-width:0;
   background-color: rgb(229, 229, 229);
+}
+
+.PackageInfo{
+  flex: 70%;
+}
+
+.SenderInfo{
+  flex: 30%;
+}
+
+.EventInfo{
+  font-size: 12px;
+  color: #6E6E6E;
 }
